[package]
name = "med_arts"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
eframe = "0.31"
epi = "0.17"
egui = "0.31"
egui_extras = { version = "0.23", features = ["chrono"] }
# egui_extras = "0.31"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
semver = "1.0"
poll-promise = "0.3"
self_update = "0.38"
plotters = "0.3.5"
egui_plot = "0.25.0"

[features]
default = []
persistence = ["eframe/persistence"]
